# ProbAE_Deconv

./: .gitignore  PACKAGE_REFERENCE.md  README.md  probabilistic_archetypal_autoencoder_levine32_design.md  pyproject.toml  tmp_k7_bck_pct.csv  tmp_k7_match.csv  tmp_k7_pdx_pct.csv  train.py
PDAC/: 300_pdac_pae_k_sweep.ipynb  README.md  run_pae_k_sweep.py
azure/: aml_entrypoint.sh  deploy_vm.sh  fetch_results.sh  setup_vm.sh  submit_aml_job.sh
comparisons/: 00_levine32_full_benchmark_from_config.ipynb  01_run_levine32_benchmark.ipynb  02_levine32_benchmark_report.ipynb  README.md  run_levine32_deconvolution_benchmark.py
configs/: base.yaml  bck44_scrna_nb_k_sweep.yaml  beta_binomial.yaml  breast_pae_MCF7_k_sweep.yaml  breast_pae_k5.yaml  breast_pae_k_sweep.yaml  breast_pae_novim_k_sweep.yaml  breast_pae_withvim_k5.yaml  experiment_suite.yaml  gaussian.yaml  levine32_archetype_sweep.yaml  levine32_default.yaml  levine32_pae_k10_full.yaml  multimodal_suite.yaml  multimodal_training.yaml  nb.yaml  pdac_michael_pae_k_sweep.yaml  pdx2_scrna_nb_k_sweep.yaml  sct_gaussian_k_sweep.yaml
docs/: ANALYSIS_LLM_INSTRUCTIONS.md  DESIGN.md  README_for_analysis_llms.md  multimodal_deconvolution_addition.md
notebooks/: 04_levine32_deconvolution_14_archetypes.ipynb  05_guy_datasets_deconvolution_latent4.ipynb  PrepPDAC.ipynb  README.md
runpod/: create_pod.sh  fetch_results.sh  prepare_breast_dataset.sh  prepare_dataset.sh  run_remote.sh  run_suite.sh  setup_pod.sh
scripts/: benchmark_training_speed.py  evaluate.py  generate_notebooks.py  prepare_breast_dataset.py  train.py  (+3 more)
(+90 files in other folders)
